Prepping for Launch

--- a/includes/_mixins.pug
+++ b/includes/_mixins.pug
@@ -1,12 +1,12 @@
 mixin nav-list
-  ul 
+  ul
     li#navhome
       a(href="index.html") Mirror Home
     li#navdistributions
       a(href="distributions.html") Distributions
     li#navmisc
       a(href="misc.html") Misc.
-    li#navdirectory
-      a(href="directory.html") Directory Listing
-    li#navhistory 
+    //- li#navdirectory
+      //- a(href="directory.html") Directory Listing
+    li#navhistory
       a(href="history.html") History & Sponsors
