--- a/pug/misc.pug
+++ b/pug/misc.pug
@@ -15,89 +15,111 @@ html(lang="en")
         var foo = document.getElementById('navmisc');
         foo.setAttribute("class", "current");
       };
-      
+
   body
     include ../includes/_header.pug
-    
+
     .content
       .container
         section
           h1 GNU Software (Official Mirror)
-          h5 HTTP: 
-          a(href="http://mirror.clarkson.edu/gnu/") http://mirror.clarkson.edu/gnu/
+          h5 HTTP:
+          a(href="./gnu/") http://mirror.clarkson.edu/gnu/
           br
-          
+
           h5 Rsync:
           |  rsync://mirror.clarkson.edu/gnu
           br
           br
-          
-          h5 Upstream Mirror: 
-          a(href="http://mirror.rit.edu/") http://mirror.rit.edu/
+
+          h5 Upstream Mirror:
+          a(href="http://mirrors.kernel.org/") http://mirrors.kernel.org/
           br
-          
+
           h5 Frequency of Updates:
           |  4 times Daily
           br
-          
-          h5 Homepage: 
+
+          h5 Homepage:
           a(href="http://directory.fsf.org/GNU/") http://directory.fsf.org/GNU/
-        
+
         section
-          h1 Linux (Including Kernel Source)
-          h5 HTTP: 
-          a(href="http://mirror.clarkson.edu/linux/") http://mirror.clarkson.edu/linux/
+          h1 Linux (Including Kernel Source) (Not synced yet)
+          h5 HTTP:
+          a(href="./linux/") http://mirror.clarkson.edu/linux/
           br
-          
+
           h5 Rsync:
           |  rsync://mirror.clarkson.edu/linux/
           br
           br
-          
-          h5 Upstream Mirror: 
+
+          h5 Upstream Mirror:
           a(href="http://rsync.kernel.org/") http://rsync.kernel.org/
           br
-          
+
           h5 Frequency of Updates:
           |  4 times Daily
           br
-          
-          h5 Homepage: 
+
+          h5 Homepage:
           a(href="http://kernel.org") http://kernel.org
-          
+
         section
-          h1 Software (Not Linux-specific)
-          h5 HTTP: 
-          a(href="http://mirror.clarkson.edu/software/") http://mirror.clarkson.edu/software/
+          h1 Extra Packages for Enterprise Linux (EPEL) (Official Mirror)
+          h5 HTTP:
+          a(href="./epel/") http:://mirror.clarkson.edu/epel/
           br
-          
+
+          h5 Rsync:
+          | rsync://mirror.clarkson.edu/fedora-epel/
+          br
+          br
+
+          h5 Upstream Mirror:
+          a(href="http://mirrors1.kernel.org") http://mirrors1.kernel.org
+          br
+
+          h5 Frequency of Updates:
+          | 4 times Daily
+          br
+
+          h5 Homepage:
+          a(href="http://fedoraproject.org/wiki/EPEL") http://fedoraproject.org/wiki/EPEL
+
+        section
+          h1 Software (Not Linux-specific) (Not synced yet)
+          h5 HTTP:
+          a(href="./software/") http://mirror.clarkson.edu/software/
+          br
+
           h5 Rsync:
           |  rsync://mirror.clarkson.edu/software/
           br
           br
-          
-          h5 Upstream Mirror: 
+
+          h5 Upstream Mirror:
           a(href="http://debian.lcs.mit.edu/") http://debian.lcs.mit.edu/
           br
-          
+
           h5 Frequency of Updates:
           |  4 times Daily
           br
-          
-          h5 Homepage: 
+
+          h5 Homepage:
           a(href="http://kernel.org") http://kernel.org
-          
+
         section
-          h1 Isabelle
-          h5 HTTP: 
+          h1 Isabelle (Official Mirror)
+          h5 HTTP:
           a(href="http://mirror.clarkson.edu/isabelle/") http://mirror.clarkson.edu/isabelle/
           br
-          
+
           h5 Frequency of Updates:
           |  4 times Daily
           br
-          
-          h5 Homepage: 
+
+          h5 Homepage:
           a(href="https://isabelle.in.tum.de/") https://isabelle.in.tum.de/
-    
+
     include ../includes/_footer.pug
