Updating to add cygwin onto page

--- a/pug/misc.pug
+++ b/pug/misc.pug
@@ -44,7 +44,7 @@ html(lang="en")
 					a(href="http://directory.fsf.org/GNU/") http://directory.fsf.org/GNU/
 
 				section
-					h1 Linux (Including Kernel Source) (Not synced yet)
+					h1 Linux (Including Kernel Source)
 					h5 HTTP:
 					a(href="./linux/") http://mirror.clarkson.edu/linux/
 					br
@@ -68,7 +68,7 @@ html(lang="en")
 				section
 					h1 Extra Packages for Enterprise Linux (EPEL) (Official Mirror)
 					h5 HTTP:
-					a(href="./epel/") http:://mirror.clarkson.edu/epel/
+					a(href="./fedora-epel/") http:://mirror.clarkson.edu/fedora-epel/
 					br
 
 					h5 Rsync:
@@ -86,28 +86,6 @@ html(lang="en")
 
 					h5 Homepage:
 					a(href="http://fedoraproject.org/wiki/EPEL") http://fedoraproject.org/wiki/EPEL
-
-				section
-					h1 Software (Not Linux-specific) (Not synced yet)
-					h5 HTTP:
-					a(href="./software/") http://mirror.clarkson.edu/software/
-					br
-
-					h5 Rsync:
-					|	rsync://mirror.clarkson.edu/software/
-					br
-					br
-
-					h5 Upstream Mirror:
-					a(href="http://debian.lcs.mit.edu/") http://debian.lcs.mit.edu/
-					br
-
-					h5 Frequency of Updates:
-					|	4 times Daily
-					br
-
-					h5 Homepage:
-					a(href="http://kernel.org") http://kernel.org
 
 				section
 					h1 The Document Foundation (Including LibreOffice)
@@ -132,9 +110,22 @@ html(lang="en")
 					a(href="http://www.documentfoundation.org/") http://www.documentfoundation.org/
 
 				section
+					h1 Cygwin
+					h5 HTTP:
+					a(href="./cygwin/") http://mirror.clarkson.edu/cygwin/
+					br
+
+					h5 Frequency of Updates:
+					| 4 times Daily
+					br
+
+					h5 Homepage:
+					a(href="https://www.cygwin.com/") https://www.cygwin.com/
+
+				section
 					h1 Isabelle (Official Mirror)
 					h5 HTTP:
-					a(href="http://mirror.clarkson.edu/isabelle/") http://mirror.clarkson.edu/isabelle/
+					a(href="./isabelle/") http://mirror.clarkson.edu/isabelle/
 					br
 
 					h5 Frequency of Updates:
