--- a/includes/_mixins.pug
+++ b/includes/_mixins.pug
@@ -8,5 +8,7 @@ mixin nav-list
       a(href="misc.html") Misc.
     //- li#navdirectory
       //- a(href="directory.html") Directory Listing
+    li#navstats
+      a(href="stats.html") Statistics
     li#navhistory
       a(href="history.html") History & Sponsors
