--- a/scss/main.scss
+++ b/scss/main.scss
@@ -110,3 +110,13 @@ img.logo {
 .row {
   margin-bottom: 8px;
 }
+
+img.statImg {
+  max-width: 75%;
+  max-height: auto;
+  margin-bottom: 20px;
+
+  @media screen and (max-width: 800px) {
+    max-width: 350px;
+  }
+}
